# continual-medseg-distill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/: base.yaml
docs/: DATA_DESCRIPTION.md  DATA_DESCRIPTION_DETAILED.md  DATA_SPLIT_PROTOCOL.md  EXPERIMENT_SUMMARY_20260403.md  PROGRESS.md  PROGRESS_REPORT_20260401.md  SCIENTIFIC_REVIEW_20260402.md  TEAM_ALLOCATION_AND_EXECUTION_PLAN.md  TECHNICAL_REPORT_20260402.md  dataset_notes.md  experiment_protocol.md  experiment_report_20260404.md  instruction_20260403.md  instruction_20260404.md  instruction_20260404_1830.md
experiments/: registry.yaml
scripts/: amp_smoke.py  bootstrap_env.sh  build_failure_panel.py  check_experiment_fairness.py  compile_ablation_matrix.py  compute_report.py  ddp_smoke.py  doctor.py  download_checkpoints.sh  eval.py  experiment_status.py  make_clean_split.py  package_results.py  plot_results.py  prepare_data.py  pretrain_teacher_adapter.py  run_ablations.py  run_all_adapters.sh  run_baseline_suite.py  run_continual.py  run_grace_ablation.sh  run_realckpt_benchmark.sh  scan_corrupt_nifti.py  setup_external.sh  stats_report.py  train.py  update_progress.py  validate_data.py  validate_freeze_spec.py  validate_teacher_contract.py
src/: __init__.py
src/data/: __init__.py  (+7 more)
tests/: test_dicece_loss.py  test_fisher_ewc.py  test_infra_scripts.py  test_lora.py  test_metrics_edge_cases.py  test_multi_task.py  test_ortho_reg.py  test_phase_next.py  test_reproducibility.py  test_sprint_code.py  test_teacher_and_kd.py  test_teacher_backends.py  test_validate_data.py
(+125 files in other folders)
